--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@heroicons/react": "^1.0.6",
     "date-fns": "^2.28.0",
     "date-range": "^0.0.2",
+    "mapbox-gl": "^2.8.0",
     "next": "^12.1.2",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^7.0.10",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
